<resources>
    <string name="app_name">Balaqai</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_or_phone">Почта / Телефон нөмірі</string>
    <string name="password">Құпиясөз</string>
    <string name="password_repeat">Құпиясөзді қайталау </string>
    <string name="go">Кіру</string>
    <string name="forgot_password">Құпиясөз ұмыттыңыз ба?</string>
    <string name="don_t_have_account_yet">Тіркелмегенсіз бе?</string>
    <string name="sign_up">Тіркелу</string>
    <string name="fullname">Аты-жөні</string>
    <string name="age">Жасы</string>
    <string name="login">Кіру</string>
    <string name="do_you_have_account">Тіркеліп қойғансыз ба?</string>
    <string name="checkBox_text">By proceeding, you agree to our user agreement and privacy policy</string>
    <string name="email_address">Электронды почта</string>
    <string name="mobail_number">Телефон нөмірі</string>
    <string name="verify_code">Растау коды</string>
    <string name="email_text"><b>Электронды почтаңызды енгізіңіз</b></string>
    <string name="number_text"><b>Телефон нөміріңізді енгізіңіз</b></string>
    <string name="email_verification_code">Почтаңызға жіберілген растау кодын енгізіңіз </string>
    <string name="number_verification_code">Телефон нөміріңізге жіберілген растау кодын енгізіңіз</string>
    <string name="continue_btn">Жалғастыру</string>
    <string name="confirm_password">Құпиясөзді растау</string>
    <string name="new_passord_text">Жаңа құпиясөз енгізіңіз</string>
    <string name="submit">Жіберу</string>
    <string name="image">image</string>
    <string name="with_number">телефон нөмірі арқылы кіру</string>
    <string name="with_email">электронды почта арқылы кіру</string>
    <string name="traditions">салт-дәстүр</string>
    <string name="games">ойындар</string>
    <string name="profile">Профиль</string>
    <string name="bastay">Бастау</string>
    <string name="next">Келесі</string>
    <string name="end">Аяқтау</string>
    <string name="info">Мағлұмат</string>
    <string name="video">Бейнежазба</string>
    <string name="question">Сұрақ-жауап</string>
    <string name="what_in_peacture">Суретте не көрсетілген?</string>
    <string name="hidden_things">Жасырылған заттар</string>
    <string name="AliAndAyya">Әли мен Айя</string>
    <string name="collate">Сәйкестендір</string>
    <string name="start_game">БАСТАУ</string>
    <string name="collate_IMAGES">Сәйкес суреттерді тап</string>
</resources>