<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_tradition"
    tools:context=".traditions.VideoTrActivity">


    <ImageView
        android:layout_width="280dp"
        android:layout_height="260dp"
        android:src="@drawable/custom_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="-10dp"/>

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="25dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/linear_layout_style"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:text="@string/info"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:background="@drawable/button_style_video"
            android:text="@string/video"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/raleway_bold"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="@color/white"
            android:textSize="10sp" />

    </LinearLayout>


    <Button
        android:id="@+id/button_next"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/button_style_start"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>