<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bacgroud_log_reg"
    android:orientation="vertical"
    tools:context=".authorization.LoginFragment"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="250dp"
        android:layout_height="130dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/dombra"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/dombra2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-40dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/balaqai"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/dombra"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/editText_fullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText_email_phone_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/email_or_phone"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/editText_fullName"
            app:layout_constraintStart_toStartOf="@+id/editText_fullName"
            app:layout_constraintTop_toBottomOf="@id/editText_fullName" />

        <EditText
            android:id="@+id/editText_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/editText_email_phone_register"
            app:layout_constraintStart_toStartOf="@+id/editText_email_phone_register"
            app:layout_constraintTop_toBottomOf="@id/editText_email_phone_register" />


        <CheckBox
            android:id="@+id/checkbox_agree"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:text="@string/checkBox_text"
            app:layout_constraintEnd_toEndOf="@+id/editText_password_register"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editText_password_register"
            app:layout_constraintTop_toBottomOf="@id/editText_password_register" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/button_style"
            android:text="@string/sign_up"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.336"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkbox_agree"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_have_account"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/login_tvBtn"
            app:layout_constraintHorizontal_bias="0.985"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintVertical_bias="0.219" />

        <TextView
            android:id="@+id/login_tvBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:text="@string/login"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintVertical_bias="0.219" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>