<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".authorization.LoginFragment"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/balaqai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:src="@drawable/balaqaiword1x"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.072" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="290dp"
            android:layout_height="45dp"
            android:layout_marginTop="84dp"
            android:text="@string/number_verification_code"
            style="@style/textStyles"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/balaqai" />


        <EditText
            android:id="@+id/et_recover_email"
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/verify_code"
            android:padding="12dp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tvToEmailBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/with_email"
            android:textColor="@color/purple_500"
            style="@style/textStyles"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_recover_email" />

        <Button
            android:id="@+id/button_continue"
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:background="@drawable/button_style_green"
            android:textColor="@color/white"
            android:text="@string/continue_btn"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvToEmailBtn"
            app:layout_constraintVertical_bias="0.542" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>