<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_background"
    tools:context=".authorization.LoginFragment"
    android:layout_gravity="center">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/balaqai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:src="@drawable/balaqaiword1x"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.072" />

        <EditText
            android:id="@+id/etasd"
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:layout_marginTop="112dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/balaqai" />


        <EditText
            android:id="@+id/etage"
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/age"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/etasd"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etasd"
            app:layout_constraintTop_toBottomOf="@id/etasd" />

        <Button
            android:id="@+id/button"
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:background="@drawable/button_style"
            android:text="@string/continue_btn"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etage" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>