<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bacgroud_log_reg"
    android:orientation="vertical"
    tools:context=".authorization.LoginFragment"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="250dp"
        android:layout_height="130dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/dombra"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/dombra2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-40dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/balaqai"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/dombra"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/new_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_passord_text"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/password"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_password_text" />

        <EditText
            android:id="@+id/confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/edit_text_style"
            android:hint="@string/confirm_password"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/new_password"
            app:layout_constraintStart_toStartOf="@+id/new_password"
            app:layout_constraintTop_toBottomOf="@id/new_password" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/button_style"
            android:text="@string/submit"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_new_password"
            app:layout_constraintVertical_bias="0.65" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>